testsuite/tests/contrib/lkt_semantic/invalid_type_ref/test.lkt
generic [T]
class U {
}

@invalid a: U

@invalid class V: U {
}
