testsuite/tests/contrib/lkt_semantic/invalid_type_ref/test.out
Resolving test.lkt
==================
test.lkt:5:13: error: Invalid type reference
5 | @invalid a: U

Id   <RefId "U" test.lkt:5:13-5:14>
     references <GenericDecl "U" test.lkt:1:1-3:2>

test.lkt:7:19: error: Invalid type reference
7 | @invalid class V: U {

Id   <RefId "U" test.lkt:7:19-7:20>
     references <GenericDecl "U" test.lkt:1:1-3:2>

